made changes in file name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Dice Game</title>
 </head>
 <body class="bg-img" style="background-image: url('images/back.jpg');">
-<h1 class="m-5">Refresh me</h1>
+<h1 class="m-5">Refresh page</h1>
 
 <div class="container">
     <div class="row justify-content-center align-items-center">
